networkPolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-same-pods
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: helloworld
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: helloworld
      ports:
        - port: 5000
